Add commands to text file

--- a/cfg/config.ini
+++ b/cfg/config.ini
@@ -11,6 +11,12 @@ region = us-east-2
 logfile = ../logs/twitch_plays_prismata.log
 logfile_chat = ../logs/twitch_plays_prismata_chat.log
 prismata_exe_path = D:/Games/Prismata/prismata.exe
+stream_display_usernames = ../stream_display_usernames.txt
+stream_display_commands = ../stream_display_commands.txt
+
+[Stream]
+display_username_max_length = 15
+display_command_max_length = 10
 
 [Screen positions]
 dismiss_patch_notes = 1469, 180
