Automate start and restart of match

--- a/cfg/config.ini
+++ b/cfg/config.ini
@@ -29,4 +29,17 @@ select_time_limit = 684, 511
 standard_set = 566, 630
 add_unit = 674, 733
 remove_unit = 767, 733
-start_match = 811, 195
+vs_cpu_start_match = 811, 195
+return_to_lobby = 963, 537
+
+top_player_turn_box = 342, 75
+bottom_player_turn_box = 342, 1000
+unit_tab_separator = 157, 230
+in_game_pixel_indicator = 665, 1018
+defeat_pixel = 761, 301
+
+[Colours]
+return_to_lobby = 255, 255, 255
+unit_tab_separator = 76, 98, 129
+in_game_pixel_indicator = 202, 194, 237
+defeat_pixel = 187, 187, 187
