Add column coordinates for future click feature

--- a/cfg/config.ini
+++ b/cfg/config.ini
@@ -38,6 +38,15 @@ unit_tab_separator = 157, 230
 in_game_pixel_indicator = 665, 1018
 defeat_pixel = 761, 301
 
+horizontal_start = 412
+horizontal_end = 1905
+column_1 = 903
+column_2 = 745
+column_3 = 602
+column_4 = 446
+column_5 = 295
+column_6 = 145
+
 [Colours]
 return_to_lobby = 255, 255, 255
 unit_tab_separator = 76, 98, 129
